tests/data/ingress-mtls/ingress/mergeable-minion/ingress-mtls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mtls-ingress-master
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ingress-mtls.example.com
      secretName: tls-secret
  rules:
    - host: ingress-mtls.example.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mtls-ingress-minion
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/policies: "ingress-mtls-policy"
spec:
  ingressClassName: nginx
  rules:
    - host: ingress-mtls.example.com
      http:
        paths:
          - path: /backend1
            pathType: Prefix
            backend:
              service:
                name: backend1-svc
                port:
                  number: 80
